Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18606

[REG 4.3->4.4] Attach to Remote Debugging Server doesn't work for alien kit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.4.0-beta1
    • Qt Creator 4.4.0-beta1
    • Debugger
    • None

      ... when a project is open.

      • Open a qmake project configured with Qt configured kit
      • Create a kit that has no Qt configured
      • Execute Attach to Remote Debugging Server, and pick the non-Qt kit
      • The following messages appear in the console (nothing happens in the UI):
      No build configuration factory found for target id '{a598be51-7ab3-4b24-b235-39bb59bc2208}'.
      No deployment configuration factory found for target id '{a598be51-7ab3-4b24-b235-39bb59bc2208}'.
      No run configuration factory found for target id '{a598be51-7ab3-4b24-b235-39bb59bc2208}'.
      SOFT ASSERT: "runConfig" in file F:\Projects\qt-creator\qt-creator\src\plugins\debugger\debuggerruncontrol.cpp, line 642

      dummyRunConfigForKit tries to create a new target for the active project, but it fails since no run factory matches the chosen kit.

        For Gerrit Dashboard: QTCREATORBUG-18606
        # Subject Branch Project Status CR V

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes