Refine the creation of a dummy project for the debugger

If the startup project doesn't support the chosen kit, it fails.

Task-number: QTCREATORBUG-18606
Change-Id: I745768e7e9ee1740dadaae05d02dcc45f9e9ebef
Reviewed-by: hjk <hjk@qt.io>